<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/MainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.camera.view.PreviewView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/closeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="33dp"
            android:contentDescription="@string/image_description"
            android:onClick="closeApp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="41dp"
            android:layout_height="59dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="10dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headerView"
            android:layout_width="0dp"
            android:layout_height="59dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:padding="10sp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="33sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10sp"
            android:background="@drawable/layout_bg"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="9sp"
            android:text="@string/ai_start"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintBottom_toTopOf="@+id/footerOptionsView"
            app:layout_constraintEnd_toEndOf="@id/inner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/inner" />

        <ImageView
            android:id="@+id/micImageView"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/image_description"
            android:onClick="speakerstate"
            android:padding="12sp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" />

        <ScrollView
            android:id="@+id/footerOptionsView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/viewsLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/deafView2"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:onClick="setView"
                    android:text="@string/deafView" />

                <TextView
                    android:id="@+id/blindView2"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:onClick="setView"
                    android:text="@string/blindView" />

                <TextView
                    android:id="@+id/dumbView2"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:onClick="setView"
                    android:text="@string/dumbView" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/deafTextView"
            android:layout_width="376dp"
            android:layout_height="527dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="17sp"
            android:gravity="center_horizontal|center_vertical"
            android:textAlignment="center"
            android:textSize="23sp"
            app:layout_constraintBottom_toTopOf="@+id/deafmicImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/deafmicImageView"
            android:layout_width="122dp"
            android:layout_height="116dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/image_description"
            android:padding="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>